# det_qwq

./: .gitignore  CMakeLists.txt  README.md  config.h.in  configuration.cpp  configuration.h  customstatusbar.cpp  customstatusbar.h  dashboard.cpp  dashboard.h  database.cpp  database.h  dbconn.cpp  dbconn.h  denoise_cuda.h  denoise_kernels.cu  detectionboard.cpp  detectionboard.h  glob_conf.h.in  gpuinfo.cpp  gpuinfo.h  iteminfo.cpp  iteminfo.h  main.cpp  mainwindow.cpp  mainwindow.h  onnxruntime_inference_session.cpp  onnxruntime_inference_session.h  openglboard.cpp  openglboard.h  qt_utils.hpp  resources.qrc  serial_port_configuration_board.cpp  serial_port_configuration_board.h  sidebar.cpp  sidebar.h  sr_cuda.h  sr_kernels.cu  trainboard.cpp  trainboard.h  (+2 more)
cmake/: FindPythonLocal.cmake
cuda_opencv_test/: CMakeLists.txt  cuda_processor.cu  main.cpp  mainwindow.cpp  mainwindow.h
det_qwq_layout/: CMakeLists.txt
gl/: fragment_shader.fsh  vertex_shader.vsh
pyscripts/yolo_trainer/: train.py
shaders/: plot.frag  plot.vert
single_opencv_test/: CMakeLists.txt  main.cpp
trainboard/: CMakeLists.txt
trainboard/train_layout/: CMakeLists.txt  cuda_t.cu  train_configuration_panel.cpp  train_configuration_panel.h
utils/: CMakeLists.txt  test.h
utils/gpu_info/: CMakeLists.txt  gpu_performance_monitor.cpp  gpu_performance_monitor.h
